<resources>
    <string name="app_name">Saci</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_login">loginActivity</string>
    <string name="login">Login</string>
    <string name="hint">hint</string>
    <string name="password">Password</string>
    <string name="entrar">ENTRAR</string>
    <string name="entrar_com_biometria">Entrar com Biometria</string>
    <string name="esqueceu_a_senha">Esqueceu a senha?</string>
    <string name="criar_conta">Criar conta</string>
    <string name="title_activity_initial">initialActivity</string>
    <string name="title_activity_cadastro_incidente">cadastroIncidenteActivity</string>
    <string name="descri_o">Descrição</string>
    <string name="t_tulo">Título</string>
    <string name="salvar">Salvar</string>

    <string-array name="classificacao_array">
        <item>Enchente</item>
        <item>Queda de Árvore</item>
        <item>Queda de Poste</item>
        <item>Acidente de carro</item>
        <item>Assalto</item>
        <item>Quebra de barragem</item>
        <item>Vazamento de produtos Químicos</item>
        <item>Falta de energia</item>
    </string-array>
    <string name="title_activity_publicacoes">publicacoesActivity</string>
    <string name="my_location_name">Me</string>
    <string name="edit_text_hint_message">Pesquise uma localização</string>
    <string name="my_publications">Minhas publicações</string>
    <string name="exit_app">Sair</string>
    <string name="title_activity_show_profile">showProfileActivity</string>
    <string name="yourusername"><![CDATA[<YourUsername>]]></string>
    <string name="n_mero_de_incidentes_reportados">Número de incidentes reportados:</string>
    <string name="numberincidentes"><![CDATA[<NumberIncidentes>]]></string>
    <string name="userselfpicture">userselfpicture</string>
    <string name="my_profile">Meu perfil</string>
</resources>
