<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_show_profile"
        tools:context=".showProfileActivity" android:contentDescription="@string/userselfpicture">

    <ImageView
            android:layout_width="164dp"
            android:layout_height="157dp" app:srcCompat="@android:drawable/sym_def_app_icon"
            android:id="@+id/imageView" android:layout_marginTop="148dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="120dp" android:layout_marginStart="120dp"
            android:contentDescription="@string/userselfpicture"/>
    <TextView
            android:text="@string/yourusername"
            android:layout_width="216dp"
            android:layout_height="40dp"
            android:id="@+id/username_text" android:layout_marginTop="52dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            android:gravity="center" android:textSize="24sp" android:layout_marginStart="96dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="96dp"/>
    <TextView
            android:text="@string/n_mero_de_incidentes_reportados"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2" android:layout_marginTop="96dp"
            app:layout_constraintTop_toBottomOf="@+id/username_text" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="40dp" android:layout_marginStart="40dp" android:gravity="center"/>
    <TextView
            android:text="@string/numberincidentes"
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:id="@+id/numberIncidentes_text" android:layout_marginTop="96dp"
            app:layout_constraintTop_toBottomOf="@+id/username_text" app:layout_constraintStart_toEndOf="@+id/textView2"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>