<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_login"
        tools:context=".LoginActivity">

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="182dp"
            android:layout_height="60dp"
            android:layout_marginTop="148dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="108dp" android:layout_marginStart="108dp" android:id="@+id/textInputLayout">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login" android:textSize="18sp" android:id="@+id/username_login"/>
    </com.google.android.material.textfield.TextInputLayout>
    <EditText
            android:layout_width="181dp"
            android:layout_height="46dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/password_login"
            android:hint="@string/password" android:layout_marginStart="112dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="112dp"
            android:layout_marginTop="36dp" app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
            android:layout_marginRight="8dp" app:layout_constraintHorizontal_bias="0.0"/>
    <Button
            android:text="@string/entrar"
            android:layout_width="181dp"
            android:layout_height="52dp"
            android:id="@+id/button_login" app:layout_constraintStart_toStartOf="@+id/password_login"
            app:layout_constraintEnd_toEndOf="@+id/password_login" android:layout_marginTop="36dp"
            app:layout_constraintTop_toBottomOf="@+id/password_login" app:layout_constraintHorizontal_bias="0.833"
            android:backgroundTint="@android:color/holo_red_dark"
            android:textColor="@android:color/white"
    />
    <TextView
            android:layout_width="181dp"
            android:layout_height="27dp"
            android:id="@+id/login_biometria" android:text="@string/entrar_com_biometria"
            app:layout_constraintStart_toStartOf="@+id/button_login"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/button_login"
            android:textColor="@android:color/holo_red_dark"
            android:textAlignment="center"
    />
    <TextView
            android:text="@string/esqueceu_a_senha"
            android:layout_width="181dp"
            android:layout_height="27dp"
            android:id="@+id/esqueceu_senha" app:layout_constraintStart_toStartOf="@+id/login_biometria"
            android:layout_marginTop="20dp" app:layout_constraintTop_toBottomOf="@+id/login_biometria"
            android:textColor="@android:color/holo_red_dark"
            android:textAlignment="center"
    />
    <TextView
            android:text="@string/criar_conta"
            android:layout_width="180dp"
            android:layout_height="23dp"
            android:id="@+id/criar_conta" app:layout_constraintStart_toStartOf="@+id/esqueceu_senha"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/esqueceu_senha"
            android:textColor="@android:color/holo_red_dark"
            android:textAlignment="center"
    />
    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                                android:id="@+id/guideline" app:layout_constraintGuide_begin="20dp"
                                                android:orientation="vertical"/>
    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                                android:id="@+id/guideline2" app:layout_constraintGuide_begin="20dp"
                                                android:orientation="vertical"/>
    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                                android:id="@+id/guideline3" app:layout_constraintGuide_begin="20dp"
                                                android:orientation="vertical"/>

</androidx.constraintlayout.widget.ConstraintLayout>