<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_cadastro_incidente"
        tools:context=".cadastroIncidenteActivity">

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/titulo_incidente_text"
            android:hint="@string/t_tulo" android:layout_marginTop="64dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="96dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="96dp"/>

    <Spinner
            android:id="@+id/spinner_classificacao_incidente"
            android:layout_width="215dp"
            android:layout_height="48dp"
            android:layout_marginTop="44dp"
            app:layout_constraintTop_toBottomOf="@+id/titulo_incidente_text"
            app:layout_constraintStart_toStartOf="@+id/titulo_incidente_text"
    />
    <TextView
            android:layout_width="203dp"
            android:layout_height="102dp"
            android:id="@+id/descricao_incidente_text"
            app:layout_constraintStart_toStartOf="@+id/spinner_classificacao_incidente"
            android:layout_marginTop="44dp" app:layout_constraintTop_toBottomOf="@+id/spinner_classificacao_incidente"
            android:hint="@string/descri_o" android:clickable="true" android:focusable="true"/>

    <Button
            android:text="@string/salvar"
            android:layout_width="181dp"
            android:layout_height="52dp"
            android:id="@+id/button_login"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:textColor="@android:color/white"
            app:layout_constraintTop_toBottomOf="@+id/incidentePhotoButton"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="8dp" android:layout_marginTop="28dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"/>
    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@android:drawable/ic_menu_camera"
            android:id="@+id/incidentePhotoButton"
            android:layout_marginTop="36dp"
            app:layout_constraintTop_toBottomOf="@+id/descricao_incidente_text"
            app:layout_constraintEnd_toEndOf="@+id/descricao_incidente_text" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"/>
    <ImageView
            android:layout_width="117dp"
            android:layout_height="77dp" app:srcCompat="@android:drawable/ic_menu_gallery"
            android:id="@+id/incidentPhotoImage"
            app:layout_constraintEnd_toStartOf="@+id/incidentePhotoButton"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/descricao_incidente_text" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/button_login"
            app:layout_constraintVertical_bias="0.13" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            app:layout_constraintHorizontal_bias="0.785"/>

</androidx.constraintlayout.widget.ConstraintLayout>